# picoagent

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  justfile  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: ci.yml
spore-core/: CLAUDE.md  Cargo.toml
spore-core/examples/: bme680_temp.spore  bme680_thp.spore
spore-core/src/: buffer.rs  dict.rs  lib.rs  op.rs  parse.rs  platform.rs  stack.rs  strings.rs  task.rs  value.rs  vm.rs
spore-core/tests/: vm_tests.rs
src/: config.rs  main.rs  wdt.rs
src/agent/: loop_.rs  mod.rs  session.rs  types.rs
src/llm/: claude.rs  mod.rs
src/net/: http.rs  mod.rs  ota.rs  wifi.rs
src/storage/: mod.rs  spiffs.rs
src/telegram/: mod.rs  polling.rs  types.rs
src/tools/: info.rs  mod.rs  spore.rs
src/tools/examples/: gpio.rs  info.rs  mod.rs  spore.rs
